03/06 - Mot Equipment Section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,6 @@
         "pdftitle",
         "repump",
         "setup"
-    ]
+    ],
+    "latex-workshop.latex.autoBuild.onSave.enabled": false
 }
