--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,5 +62,33 @@
         "repump",
         "setup"
     ],
-    "latex-workshop.latex.autoBuild.onSave.enabled": false
+    "latex-workshop.latex.autoBuild.onSave.enabled": false,
+    "cSpell.enabledLanguageIds": [
+        "asciidoc",
+        "c",
+        "cpp",
+        "csharp",
+        "css",
+        "go",
+        "handlebars",
+        "html",
+        "jade",
+        "javascript",
+        "javascriptreact",
+        "json",
+        "latex",
+        "less",
+        "markdown",
+        "php",
+        "plaintext",
+        "pub",
+        "python",
+        "restructuredtext",
+        "rust",
+        "scss",
+        "text",
+        "typescript",
+        "typescriptreact",
+        "yml"
+    ]
 }
