14/07 - Added corrections to compcontrol

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,7 @@
         }
     ],
     "latex-workshop.latex.clean.enabled": true,
-    "latex-workshop.chktex.enabled": true,
+    "latex-workshop.chktex.enabled": false,
     "latex-workshop.view.pdf.hand": true,
     "cSpell.enabled": true,
     "cSpell.ignoreRegExpList": [
